Title fixed + name spacing update on each individual

--- a/src/components/Teams/Individual/Individual.css
+++ b/src/components/Teams/Individual/Individual.css
@@ -9,8 +9,8 @@
 }
 
 .Title{
-    font-weight: 26px;
-    color: red;
+    font-weight: 22px;
+    color: black;
     transform: scale(1) !important;
 }
 
@@ -32,24 +32,27 @@
 }
 
 .UndecoratedATag{
-    color: inherit !important;
-    text-decoration: none !important;
-    cursor: pointer !important;
+    word-spacing: 0.13em;
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.UndecoratedATag :hover, .UndecoratedATag :focus, .UndecoratedATag :active, .UndecoratedATag :visited, .UndecoratedATag :focus-within{
+/* .UndecoratedATag :hover, .UndecoratedATag :focus, .UndecoratedATag :active, .UndecoratedATag :visited, .UndecoratedATag :focus-within{
     color:inherit !important;
     text-decoration: none !important;
     cursor: pointer !important;
-}
+} */
 
-.IndividualDiv :hover{
+ .IndividualDiv :hover{
     transform: scale(1.1);
     background-color: rgba(255, 255, 255, 1);
-
     transition: all 0.4s ease-in-out;
-
     /* border-bottom: 0.5px solid #625892; */
+}
+.IndividualName :hover .UndecoratedATag{
+    color: blue !important;
+    transition: all 0.4s ease-in-out;
 }
 
 @media only screen and (max-width: 600px) {
@@ -57,5 +60,12 @@
         background-color: rgba(255, 255, 255, 1);
         transform: scale(1) !important;
         /* border-bottom: 0.5px solid #625892; */
+    }
+
+    .IndividualName{
+        font-size: 16px;
+    }
+    .Title{
+        font-weight: 14px;
     }
   }
